--- a/app/src/main/res/layout/activity_driver_register.xml
+++ b/app/src/main/res/layout/activity_driver_register.xml
@@ -23,8 +23,8 @@
         app:layout_constraintStart_toStartOf="@+id/textView5" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
     <EditText
         android:id="@+id/passView"
-        android:layout_width="286dp"
-        android:layout_height="44dp"
+        android:layout_width="289dp"
+        android:layout_height="0dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Password"
@@ -32,30 +32,29 @@
         android:textAlignment="viewStart"
         app:layout_constraintEnd_toEndOf="@+id/nameView"
         app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintStart_toStartOf="@+id/nameView"
-        app:layout_constraintTop_toBottomOf="@+id/nameView"/>
+        app:layout_constraintStart_toStartOf="@+id/nameView" app:layout_constraintTop_toBottomOf="@+id/nameView"/>
     <EditText
         android:id="@+id/nameView"
         android:layout_width="289dp"
-        android:layout_height="41dp"
-        android:layout_marginTop="8dp"
-        android:ems="10" android:hint="Name"
-        android:inputType="textPersonName" android:textAlignment="viewStart"
+        android:layout_height="0dp"
+        android:layout_marginTop="8dp" android:ems="10"
+        android:hint="Name" android:inputType="textPersonName"
+        android:textAlignment="viewStart"
         app:layout_constraintEnd_toEndOf="@+id/emailView"
         app:layout_constraintHorizontal_bias="0.333"
-        app:layout_constraintStart_toStartOf="@+id/emailView"
-        app:layout_constraintTop_toBottomOf="@+id/emailView"/>
+        app:layout_constraintStart_toStartOf="@+id/emailView" app:layout_constraintTop_toBottomOf="@+id/emailView"/>
     <Button
         android:id="@+id/btn_register"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="Register"
-        app:layout_constraintEnd_toEndOf="@+id/passCornfirmView"
-        app:layout_constraintStart_toStartOf="@+id/passCornfirmView"
-        app:layout_constraintTop_toBottomOf="@+id/passCornfirmView"/>
+        app:layout_constraintEnd_toEndOf="@+id/carNumberView" app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/carNumberView"
+        app:layout_constraintTop_toBottomOf="@+id/carNumberView"/>
     <EditText
         android:id="@+id/emailView"
-        android:layout_width="292dp"
+        android:layout_width="289dp"
         android:layout_height="45dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="140dp" android:layout_marginEnd="8dp"
@@ -65,8 +64,8 @@
         app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
     <EditText
         android:id="@+id/passCornfirmView"
-        android:layout_width="286dp"
-        android:layout_height="45dp"
+        android:layout_width="289dp"
+        android:layout_height="0dp"
         android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="Password Confirm"
@@ -76,4 +75,39 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/passView"
         app:layout_constraintTop_toBottomOf="@+id/passView"/>
+    <EditText
+        android:id="@+id/carTypeView"
+        android:layout_width="289dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="4dp"
+        android:ems="10"
+        android:hint="Car Type"
+        android:inputType="none|text"
+        android:textAlignment="viewStart"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+    <EditText
+        android:id="@+id/carNumberView"
+        android:layout_width="289dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="48dp"
+        android:ems="10"
+        android:hint="Car Number"
+        android:inputType="text"
+        android:textAlignment="viewStart"
+        app:layout_constraintEnd_toEndOf="@+id/textView2"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView2"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"/>
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="Vehicle Detail"
+        android:textColor="#070707"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@+id/passCornfirmView"
+        app:layout_constraintStart_toStartOf="@+id/passCornfirmView"
+        app:layout_constraintTop_toBottomOf="@+id/passCornfirmView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
