--- a/app/src/main/res/layout/activity_customer_register.xml
+++ b/app/src/main/res/layout/activity_customer_register.xml
@@ -21,10 +21,11 @@
         android:layout_height="wrap_content" android:text="EASY TO RIDE THE TAXI"
         android:textAlignment="center" app:layout_constraintEnd_toEndOf="@+id/textView5"
         app:layout_constraintStart_toStartOf="@+id/textView5" app:layout_constraintTop_toBottomOf="@+id/textView5"/>
+
     <EditText
         android:id="@+id/passView"
         android:layout_width="286dp"
-        android:layout_height="44dp"
+        android:layout_height="48dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Password"
@@ -33,7 +34,7 @@
         app:layout_constraintEnd_toEndOf="@+id/nameView"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="@+id/nameView"
-        app:layout_constraintTop_toBottomOf="@+id/nameView"/>
+        app:layout_constraintTop_toBottomOf="@+id/nameView" />
     <TextView
         android:id="@+id/textView"
         android:layout_width="0dp"
@@ -48,26 +49,33 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/passCornfirmView"
         app:layout_constraintTop_toBottomOf="@+id/passCornfirmView"/>
+
     <EditText
         android:id="@+id/cardView"
         android:layout_width="286dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:layout_marginTop="8dp"
-        android:ems="10" android:hint="Card number"
+        android:ems="10"
+        android:hint="Card number"
         android:inputType="numberSigned|textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/textView" app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        app:layout_constraintEnd_toEndOf="@+id/textView"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/textView" />
+
     <EditText
         android:id="@+id/nameView"
         android:layout_width="289dp"
-        android:layout_height="41dp"
+        android:layout_height="48dp"
         android:layout_marginTop="8dp"
-        android:ems="10" android:hint="Name"
-        android:inputType="textPersonName" android:textAlignment="viewStart"
+        android:ems="10"
+        android:hint="Name"
+        android:inputType="textPersonName"
+        android:textAlignment="viewStart"
         app:layout_constraintEnd_toEndOf="@+id/emailView"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toStartOf="@+id/emailView"
-        app:layout_constraintTop_toBottomOf="@+id/emailView"/>
+        app:layout_constraintTop_toBottomOf="@+id/emailView" />
     <Button
         android:id="@+id/btn_register"
         android:layout_width="0dp"
@@ -77,20 +85,26 @@
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/cardView" app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
+
     <EditText
         android:id="@+id/emailView"
         android:layout_width="292dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="140dp" android:layout_marginEnd="8dp"
-        android:ems="10" android:hint="Email"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="8dp"
+        android:ems="10"
+        android:hint="Email"
         android:inputType="textWebEmailAddress|textEmailAddress"
-        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.533"
-        app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.533"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <EditText
         android:id="@+id/passCornfirmView"
         android:layout_width="286dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:layout_marginTop="4dp"
         android:ems="10"
         android:hint="Password Confirm"
@@ -99,7 +113,7 @@
         app:layout_constraintEnd_toEndOf="@+id/passView"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/passView"
-        app:layout_constraintTop_toBottomOf="@+id/passView"/>
+        app:layout_constraintTop_toBottomOf="@+id/passView" />
     <RadioGroup
         android:id="@+id/radioGroup"
         android:layout_width="0dp" android:layout_height="50dp"
