--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -40,13 +40,16 @@
         app:layout_constraintEnd_toEndOf="@+id/et_pass"
         app:layout_constraintStart_toStartOf="@+id/et_pass"
         app:layout_constraintTop_toBottomOf="@+id/et_pass"/>
+
     <Button
         android:id="@+id/btn_register"
         android:layout_width="0dp"
-        android:layout_height="wrap_content" android:layout_marginTop="8dp"
-        android:text="Rigister"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:text="Register"
         app:layout_constraintEnd_toEndOf="@+id/et_pass"
-        app:layout_constraintStart_toStartOf="@+id/et_pass" app:layout_constraintTop_toBottomOf="@+id/btn_login"/>
+        app:layout_constraintStart_toStartOf="@+id/et_pass"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
     <TextView
         android:id="@+id/textView3"
         android:layout_width="0dp"
