--- a/app/src/main/res/layout/activity_main_maps_customer.xml
+++ b/app/src/main/res/layout/activity_main_maps_customer.xml
@@ -13,7 +13,7 @@
         tools:context=".MainMapsCustomerActivity"/>
 
     <Button
-        android:id="@+id/btn_request"
+        android:id="@+id/btn_accept"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_alignParentStart="true"
@@ -29,7 +29,7 @@
         style="@style/Widget.MaterialComponents.TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/btn_request"
+        android:layout_above="@+id/btn_accept"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="0dp"
